--- a/.travis.yml
+++ b/.travis.yml
@@ -18,11 +18,6 @@ matrix:
         - python: "3.6"
           env: TEST_UNIT=0 TEST_DOCS=1
         #
-        - python: "2.7"
-          env: TEST_UNIT=legacy TEST_INSTALL=1
-        - python: "pypy-5.7.1"
-          env: TEST_UNIT=legacy TEST_INSTALL=1
-        #
         - python: "pypy3"
           env: TEST_UNIT=1
         - python: "3.5"
@@ -62,14 +57,8 @@ before_install:
 # Install dependencies
 install:
     - cd ${SRC_DIR}
-    - pip install invoke
-    - if [ "${TEST_UNIT}" == "legacy" ]; then
-        pip install pytest-cov;
-        pip install tornado;
-      fi;
     - if [ "${TEST_UNIT}" == "1" ]; then
         pip install pytest-cov;
-        pip install tornado;
         pip install selenium;
       fi;
     - if [ "${TEST_INSTALL}" == "1" ]; then
@@ -77,7 +66,6 @@ install:
       fi;
     - if [ "${TEST_DOCS}" == "1" ]; then
         pip install sphinx;
-        pip install tornado;
       fi;
     - if [ "${TEST_STYLE}" == "1" ]; then
         pip install pycodestyle;
@@ -94,19 +82,15 @@ before_script:
 script: 
     - cd ${SRC_DIR};
     - python -c "import sys; print(sys.version, '\n', sys.prefix)"
-    - if [ "${TEST_UNIT}" == "legacy" ]; then
-        invoke test --unit=dialite;
-        invoke test --unit=pyscript;
-      fi;
     - if [ "${TEST_UNIT}" == "1" ]; then
-        invoke test --unit;
+        pytest .;
       fi;
     - if [ "${TEST_DOCS}" == "1" ]; then
         python -c 'import flexx.ui';
-        invoke docs --clean --build;
+        sphinx-build docs docs/_build;
       fi;
     - if [ "${TEST_STYLE}" == "1" ]; then
-        invoke test --style;
+        flake8 .;
         fi;
     - if [ "${TEST_STYLE}" == "1" ]; then
         echo "Size difference ${SIZE_DIFF} kB";
