--- a/.travis.yml
+++ b/.travis.yml
@@ -57,7 +57,7 @@ before_install:
 # Install dependencies
 install:
     - cd ${SRC_DIR}
-    - pip install dialite
+    - pip install dialite invoke
     - if [ "${TEST_UNIT}" == "1" ]; then
         pip install pytest-cov;
         pip install selenium;
