--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,8 @@
 include LICENSE README.md
 
+recursive-include tasks *
+recursive-include webruntime/tests *
+
 global-exclude .git*
 global-exclude *.pyo
 global-exclude *.pyc
